changed fonts and size on text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 	</div>		
-		<p style="color: darkblue; font-family: 'Anton'"> 
+		<p style="color: darkblue;"> 
 			Happy birthday 
 		</p>
 		<h2 >
@@ -31,9 +31,9 @@
 		</h2>
 		<p style="color: orange;">
 			(Sense Merchant, President-LQ, Daddy Aaron) <br>
-			<small style="color: #222;">
+			<!-- <small style="color: #222;">
 				#(GLORY)
-			</small>
+			</small> -->
 		</p>
 	</div>
 </body>
